--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   font-size: large;
 }
 
+.hola {
+  margin-bottom: 1rem;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
