--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   font-family: 'IBM Plex Mono', monospace;
 }
 
-#login, #form, #propose{
+#login, #form, #propose, #welcome{
   background-color: #004149;
   color: #fff;
   height: 100vh;
@@ -66,4 +66,5 @@
   margin-left: 150px !important;
   margin-top: 10px !important;
 }
+
 
